corrected z-index

--- a/packages/frontend/src/features/filter/ui/HeaderFilter.module.scss
+++ b/packages/frontend/src/features/filter/ui/HeaderFilter.module.scss
@@ -5,7 +5,7 @@
 .filter {
   position: sticky;
   top: -150px;
-  z-index: 11;
+  z-index: 2;
   display: flex;
   align-items: flex-end;
   width: 100%;
